--- a/weather_gpt.html
+++ b/weather_gpt.html
@@ -5,144 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather Details</title>
   <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;700&display=swap" rel="stylesheet">
-  <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
-   <script>
-  const apiKey = "1eb6a55c7aab5a51b9d360c8fca062b6";
-  const params = new URLSearchParams(window.location.search);
-  const city = params.get("city") || "Delhi";
-  document.getElementById('city-title').textContent = `Weather Details: ${city}`;
-
-  // Create alert box element
-  const alertBox = document.createElement("div");
-  alertBox.id = "weather-alert";
-  alertBox.style.cssText = `
-    margin: 20px;
-    padding: 20px;
-    border-radius: 15px;
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    color: #fff;
-  `;
-  document.querySelector(".weather-container").insertBefore(alertBox, document.querySelector(".daily-forecast"));
-
-  async function getWeather() {
-    try {
-      const response = await fetch(`https://api.openweathermap.org/data/2.5/forecast?q=${city}&units=metric&appid=${apiKey}`);
-      if (!response.ok) {
-        alert('City not found. Showing default city (Delhi).');
-        return;
-      }
-      const data = await response.json();
-
-      const currentWeather = data.list[0].weather[0].main.toLowerCase();
-      const temp = data.list[0].main.temp;
-      updateAlert(currentWeather, temp);
-
-      // Daily forecast
-      const forecastEl = document.getElementById("daily-forecast");
-      forecastEl.innerHTML = "";
-      const daily = {};
-      data.list.forEach(item => {
-        const date = item.dt_txt.split(" ")[0];
-        if (!daily[date]) {
-          daily[date] = item;
-        }
-      });
-
-      Object.values(daily).slice(0, 5).forEach((day, i) => {
-        const date = new Date(day.dt_txt);
-        const options = { weekday: "short", day: "numeric" };
-        const dayName = i === 0 ? "Today" : date.toLocaleDateString("en-US", options);
-        forecastEl.innerHTML += `
-          <div class="day-card ${i === 0 ? "today" : ""}">
-            <span>${dayName}</span>
-            <img src="https://openweathermap.org/img/wn/${day.weather[0].icon}@2x.png" alt="Weather">
-            <span class="temp">${Math.round(day.main.temp)}°</span>
-          </div>
-        `;
-      });
-
-      // Hourly forecast
-      const hourlyEl = document.getElementById("hourly-scroll");
-      hourlyEl.innerHTML = "";
-      const hours = data.list.slice(0, 12);
-      let labels = [];
-      let temps = [];
-      hours.forEach(hour => {
-        const time = new Date(hour.dt_txt).toLocaleTimeString([], { hour: '2-digit', hour12: true });
-        labels.push(time);
-        temps.push(Math.round(hour.main.temp));
-        hourlyEl.innerHTML += `
-          <div class="hourly-card">
-            <span class="time">${time}</span>
-            <img src="https://openweathermap.org/img/wn/${hour.weather[0].icon}.png" alt="Weather">
-            <span class="temp">${Math.round(hour.main.temp)}°</span>
-          </div>
-        `;
-      });
-
-      // Chart.js temperature graph
-      const ctx = document.getElementById("tempChart").getContext("2d");
-      new Chart(ctx, {
-        type: "line",
-        data: {
-          labels: labels,
-          datasets: [{
-            label: "Temperature (°C)",
-            data: temps,
-            borderColor: "#197734",
-            backgroundColor: "rgba(25, 119, 52, 0.2)",
-            tension: 0.4,
-            fill: true,
-            pointBackgroundColor: "#197734",
-            pointRadius: 5
-          }]
-        },
-        options: {
-          responsive: true,
-          plugins: { legend: { display: true } },
-          scales: { y: { beginAtZero: false } }
-        }
-      });
-    } catch (error) {
-      console.error('Error fetching weather data:', error);
-      alert('Failed to get weather data. Please check your internet connection.');
-    }
-  }
-
-  // Update alert message based on weather
-  function updateAlert(condition, temp) {
-    let message = "";
-    let color = "";
-
-    if (condition.includes("rain")) {
-      message = "🌧️ Orange Alert: Heavy Rainfall Expected — Stay Safe!";
-      color = "#D9534F";
-    } else if (condition.includes("cloud")) {
-      message = "☁️ Cloudy Skies — Might Rain Later, Keep an Umbrella Handy.";
-      color = "#F0AD4E";
-    } else if (condition.includes("clear")) {
-      message = "☀️ Good Weather — Enjoy the Sunshine!";
-      color = "#5CB85C";
-    } else if (condition.includes("snow")) {
-      message = "❄️ Snowfall Alert — Dress Warm!";
-      color = "#0275D8";
-    } else if (temp < 10) {
-      message = "🥶 Cold Morning — Stay Warm and Cozy!";
-      color = "#5BC0DE";
-    } else {
-      message = "🌤️ Normal Weather Conditions.";
-      color = "#6C757D";
-    }
-
-    alertBox.textContent = message;
-    alertBox.style.backgroundColor = color;
-  }
-
-  getWeather();
-</script>
-
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       margin: 0;
